implemented a calendar frontend
